adding new id to the submit button

--- a/registrationForm.html
+++ b/registrationForm.html
@@ -45,7 +45,7 @@
 					<div class="checkbox">
 						<label><input type="checkbox"> Remember me</label>
 					</div>
-						<button type="submit" class="btn btn-primary">Submit</button>
+						<button type="submit" id="submit" class="btn btn-primary">Submit</button>
 				</form>	    
 			</div>
         </div>
