enabled submit function and alert messages
enabled submit function and alert messages

--- a/registrationForm.html
+++ b/registrationForm.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-md-6 col-sm-6">
 				<h1 class="heading">Registration Form</h1>
-				<form>
+				<form onsubmit="return false;" >
 					<div class="form-group">
 						<label for="firstName">First name:</label>
 						<input type="text" class="form-control" id="firstName">
@@ -45,7 +45,7 @@
 					<div class="checkbox">
 						<label><input type="checkbox"> Remember me</label>
 					</div>
-						<button type="submit" id="submit" class="btn btn-primary">Submit</button>
+						<button id="submit" class="btn btn-primary">Submit</button>
 				</form>	    
 			</div>
         </div>
